# sesametimeautomate

./: LICENSE  README.md
python_project/: .env.example  README.md  pyproject.toml  pytest.ini
python_project/sesame_automate/: __init__.py  main.py
python_project/sesame_automate/models/: runnable_sequence.py
python_project/sesame_automate/models/enums/: state.py
python_project/sesame_automate/runnables/: __init__.py  sesame_time_assigned_work_check_types_runnable.py  sesame_time_check_in_runnable.py  sesame_time_check_out_runnable.py  sesame_time_login_runnable.py  sesame_time_me_info_runnable.py  sesame_time_work_break_runnable.py
